--- a/graphs.ipynb
+++ b/graphs.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "graphs.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -265,14 +266,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "2626eebe-efd0-43c6-8fd8-de22f421fad0"
+        "outputId": "f1d14b44-71d1-40c9-efc2-680a1bead64c"
       },
       "source": [
-        "graf2.vertices()\n",
-        "graf2.edges()\n",
         "graf2.neighbours('d')"
       ],
-      "execution_count": 74,
+      "execution_count": 107,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -284,7 +283,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 74
+          "execution_count": 107
         }
       ]
     },
